v1.3.2(优化日志获取接口，去掉无用接口)
